<resources>
    <string name="app_name">Scheduling App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_goto_create_account">Create Account</string>
    <string name="get_name">Name</string>


    <string name="password_confirm">Confirm Password</string>
    <string name="search_button">Search</string>
    <string name="search_prompt">Search</string>
    <string name="button_searchbychiro">Search By Chiropractor</string>
    <string name="button_searchbyclinic">Search By Clinic</string>
    <string name="button_searchbylocation">Search By Location</string>
</resources>
